Fix package.json, add npm link to README

--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "base-64": ">=0.0.0",
     "http": ">=0.0.0",
     "ping": ">=0.1.0",
-    "prompt": ">=0.0.0",
+    "prompt": ">=0.0.0"
   }
 }
