--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-bravia",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Homebridge plugin for Sony Bravia TVs (AndroidTV based ones and possibly others)",
   "main": "index.js",
   "scripts": {
@@ -28,9 +28,8 @@
     "node": ">=0.12.0"
   },
   "dependencies": {
-    "base-64": ">=0.0.0",
-    "http": ">=0.0.0",
-    "ping": ">=0.1.0",
-    "prompt": ">=0.0.0"
+    "base-64": "^0.1.0",
+    "ping": "^0.2.2",
+    "prompt": "^1.0.0"
   }
 }
