--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-bravia",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Homebridge plugin for Sony Bravia TVs (AndroidTV based ones and possibly others)",
   "main": "index.js",
   "scripts": {
@@ -30,6 +30,7 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "ping": "^0.2.2",
-    "prompt": "^1.0.0"
+    "prompt": "^1.0.0",
+    "wake_on_lan": "^1.0.0"
   }
 }
