--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Homebridge plugin for Sony Bravia TVs (AndroidTV based ones and possibly others)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/homebridge/bin/homebridge -I -U ./.homebridge"
   },
   "repository": {
     "type": "git",
