--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "homebridge-bravia",
-  "version": "2.1.9",
+  "version": "2.1.10",
   "description": "Homebridge plugin for Sony Bravia TVs (AndroidTV based ones and possibly others)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/homebridge/bin/homebridge -P ./ -I -U ./.homebridge"
   },
   "repository": {
     "type": "git",
